Fix: categories in create post alignment

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -205,6 +205,7 @@ align-items: center;
 .post-time {
   color: #f5f5f5;
   font-size: 0.8em;
+  font-weight: bold;
 }
 
 .post-title {
@@ -332,16 +333,14 @@ gap: 15px;
 
 .categories-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center; /* Ensures proper alignment */
+  flex-direction: row;
+   padding: 20px;
   gap: 10px;
-  padding: 20px;
   max-width: 100%;
 }
 
 .category-group {
   display: flex;
-  align-items: center;
   gap: 5px;
 }
 
